[package]
name = "mmkv-parser"
version = "0.1.2"
edition = "2021"

authors = ["Jixun Wu <jixun.moe@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["mmkv", "tencent"]
readme = "README.MD"
description = "A readonly MMKV implementation (parser) with encryption support."
repository = "https://github.com/jixunmoe/mmkv-parser/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "passively-maintained" }

[[bin]]
name = "mmkv"
path = "src/bin/mmkv.rs"
required-features = ["cli"]

[dependencies]
thiserror = "1.0.56"
clap = { version = "4.5.0", optional = true }
clap_derive = { version = "4.5.0", optional = true }
aes = { version = "0.8.3", optional = true }
cfb-mode = { version = "0.8.2", optional = true }
byteorder = { version = "1.5.0", optional = true }
crc32fast = { version = "1.3.2", optional = true }

[features]
cipher = ["aes", "cfb-mode", "byteorder", "crc32fast"]
cli = ["clap", "clap_derive", "clap/derive"]
default = ["cipher"]
